--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.38.0",
+    "@prisma/client": "^6.4.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
@@ -23,6 +25,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "prisma": "^6.4.1",
     "typescript": "^5"
   }
 }
